--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000; 
+  z-index: 1000;
   transition: top 0.3s ease-in-out, background-color 0.3s ease;
 }
 
@@ -427,8 +427,8 @@
   }
 
   /* Submenu styles for desktop */
-  .nav-submenu {
-    display: none; /* Add this line to hide the submenu by default */
+    .nav-submenu {
+    display: none; /* This line is crucial for desktop view */
     position: absolute;
     top: calc(100% + 10px);
     left: 50%;
@@ -444,7 +444,7 @@
     border: 1px solid #004d99;
   }
 
-  .nav-submenu.show{
+  .nav-submenu.show {
     display: block;
   }
   
