--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -432,7 +432,8 @@
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
-    
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top: calc(100% + 10px);
     left: 50%;
