--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -326,7 +326,14 @@
   }
 
   .navbar-logo-link {
+    display: flex;
+    align-items: center;
     margin-right: 2rem;
+  }
+
+  .navbar-logo {
+    height: 40px;
+    width: auto;
   }
 
   .nav-links {
@@ -345,6 +352,10 @@
     align-items: center;
     flex-grow: 1;
     justify-content: space-evenly;
+  }
+
+  .nav-close-container {
+    display: none;
   }
 
   .nav-links-scroll-wrapper {
